--- a/app/src/main/res/layout/apps.xml
+++ b/app/src/main/res/layout/apps.xml
@@ -6,15 +6,16 @@
     android:orientation="vertical" >
 
     <CheckBox
-        android:id="@+id/leftright"
+        android:id="@+id/statbarblack"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Volume does left/right in text editor"
+        android:text="Status bar is also forced to black"
+        android:visibility="gone"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="false"
-        android:text="- To get left/right functionality with volume up/down: check the above checkbox and activate xrecolor for all input methods in your xposed manager.\n- To get page up/page down functionality in an app: activate xrecolor in that app in the xposed manager."/>
+        android:text="Enable in your xposed manager and set which apps should get black navbars."/>
 </LinearLayout>
