--- a/app/src/main/res/values/module_scope.xml
+++ b/app/src/main/res/values/module_scope.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="module_scope">
-        <item>com.Bisha.TI89Emu</item>>
-        <item>mobi.omegacentauri.LibriVoxDownloader</item>>
-        <item>mobi.pruss.superdim</item>>
-        <item>com.azumio.android.instantheartrate.classic</item>>
-        <item>com.simulationcurriculum.skysafari5</item>>
-        <item>com.simulationcurriculum.skysafari5plus</item>>
-        <item>com.simulationcurriculum.skysafari5pro</item>>
+        <item>com.Bisha.TI89Emu</item>
+        <item>mobi.omegacentauri.LibriVoxDownloader</item>
+        <item>mobi.pruss.superdim</item>
+        <item>com.azumio.android.instantheartrate.classic</item>
+        <item>com.simulationcurriculum.skysafari5</item>
+        <item>com.simulationcurriculum.skysafari5plus</item>
+        <item>com.simulationcurriculum.skysafari5pro</item>
+        <item>jp.co.johospace.jorte</item>
     </string-array>
 </resources>
