--- a/app/src/main/res/xml/options.xml
+++ b/app/src/main/res/xml/options.xml
@@ -5,6 +5,9 @@
 <CheckBoxPreference android:title="Force black status bar"
     android:defaultValue="false"
     android:key="statBar" />
+    <CheckBoxPreference android:title="Force show status bar"
+        android:defaultValue="false"
+        android:key="forceStatBar" />
     <ListPreference android:title="Navigation bar"
         android:key="navBarOptions"
         android:entries="@array/navBarOptionNames"
